--- a/leehyunsoo/jango/mysite/books/templates/base_books.html
+++ b/leehyunsoo/jango/mysite/books/templates/base_books.html
@@ -5,6 +5,6 @@
 {% block sidebar %}
 {{ block.super }}
 <ul>
-    <li><a href="/books/">Books_Home</a></li>
+    <li><a href="/">Books_Home</a></li>
 </ul>
 {% endblock %}
