--- a/leehyunsoo/jango/mysite/polls/templates/polls/results.html
+++ b/leehyunsoo/jango/mysite/polls/templates/polls/results.html
@@ -1,3 +1,7 @@
+{% extends "base_polls.html" %}
+
+{% block content %}
+
 <h1>{{ question.question_text }}</h1>
 
 <ul>
@@ -8,3 +12,4 @@
 
 <a href="/polls/">Vote again?</a>
 
+{% endblock %}
